--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,17 @@ a:hover {
 
 }
 
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 /* Wrapper */
 
 @-moz-keyframes wrapper {
