--- a/css/style.css
+++ b/css/style.css
@@ -71,17 +71,6 @@ a:hover {
 
 }
 
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
 /* Wrapper */
 
 @-moz-keyframes wrapper {
@@ -1238,12 +1227,6 @@ a:hover {
 
 }
 
-#header nav a:hover {
-
-    font-size: 1.1em;
-
-}
-
 #header nav a:hover:before {
 
     background-color: rgba(255, 255, 255, 0.175);
@@ -1273,6 +1256,7 @@ a:hover {
     display: none;
 
 }
+
 
 /* Footer */
 
@@ -1304,4 +1288,38 @@ a:hover {
 
     width: 100%;
 
+}
+
+.action {
+    position: absolute;
+    left:50%;
+    margin-left: -65px;
+    width: 130px;
+    height: 40px;
+    text-align: center;
+  
+}
+#blog {
+    font-size: 1em;
+    outline:none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    border-radius:40px;
+    background: transparent;
+    border: 2px solid white;
+    color:white;
+    letter-spacing:1px;
+    text-shadow:0;    
+    cursor: pointer;
+    transition: all 0.25s ease;
+    padding: 10px 30px 10px 30px;
+  }
+#blog:hover {
+    color:white;
+    background: rgba(255, 255, 255, 0.175);
+}
+#blog:active {
+    padding: 8px 25px 8px 25px;
+    font-size: 0.95em;
 }
